# dataset-rag

./: .env.example  pyproject.toml
app/conf/: lm_config.py  mineru_config.py
app/import_process/agent/: ImportGraphState.py  main_graph.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: file_import_service.py
app/import_process/page/: import.html
app/query_process/agent/: main_graph.py  state.py
app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/api/: query_server.py
app/test/: test_query_main_graph.py
