[project]
name = "dataset-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "flagembedding>=1.3.5",
    "grandalf>=0.8",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.35.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pymilvus[model]>=2.6.12",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "regex>=2026.4.4",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.44.0",
    "transformers>=4.57.6",
    "addict>=2.4.0",
    "lap>=0.5.13",
]
